     - Support for reference mass ratios (rmr) outside radical
     - More options for controlling verbosity of status output
     - New configuration option nle_mixing_polarity for 2-term with (1-smr) mode.   Status updates now indicate polarity
     - Setting phase1_random_samples_enable to 'no' now also causes phase1 to be run just once instead of continuously

     Bug fixes:
     - Fixed bug in srcipts/grep-logs.sh that was writing meta refresh line to wrong file
     - selectOutputs() now checks that both the primary reference mass and sm3 are floated (solved for) in 2-term (1-smr) mode to ensure convergance

4.2  New features: 
     - Added support for (1-smr) mode. Enable by setting smrfactor_1minus_enable=yes and nle_mode=2.  Negative exponents
         are disabled in this mode, term1 must have an odd exponent (for when 1-smr is negative), and both terms will use the same smr including reference mass.
     - Added support for two additional user-supplied factors for outside radical for total of three
     - Added phase1_random_samples_enable option.  When set to "no" variables are all set to center of experimental range each time phase1 is run
     - Phase 1 core functions are now using long doubles (80-bit extended precision on x86) and solve down to <=1.0E-16 precision
     - Symmetry score now has more checks
     - Complexity score now ignores 1's in rationals for better selection of simplest duplicate formula
     Bug Fixes:
     - Fixed several logic bugs in interesting() that were causing many factors to not be found
     - Fixed bug in verifyMatches() that was generating incorrect formula hashes and allowing duplicate formulas

4.1  - Fixed bug in selectOutputs() that would not allow user-defined mass to be used as output
     - Fixed bug in generateExponents() that affected term3 when exp_neg_enable=no
     - Fixed bug in http results upload that would filter some results even when phase2_results_always=yes